Show page setting

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,8 @@
     <title>Document</title>
     <!-- link index.css files here -->
     <link rel='stylesheet' href='/stylesheets/index.css' />
+    <script src="https://kit.fontawesome.com/a894427766.js" crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='/stylesheets/show.css' />
     <!-- link css files here -->
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
   </head>
