移動 routes 順序 + 修正 action

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 <div class='container search-bar'>
   <div class='search-bar-outer'>
     <div class='search-bar-inner'>
-      <form action='/search'>
+      <form action='/searches'>
         <h4 class='mb-2'>尋找餐廳：</h4>
         <div class='input-group'>
           <input
