--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,7 +31,7 @@
     <div class='col-md-10 col-12 mx-auto'>
       <div class='card-columns'>
         {{#each restaurants}}
-          <a href='/restaurants/{{this.id}}' class='text-secondary'>
+          <a href='/restaurants/{{ this._id }}' class='text-secondary'>
             <div class='card mb-3'>
               <img
                 class='card-img-top'
@@ -54,6 +54,9 @@
               </div>
             </div>
           </a>
+          <a href="/restaurants/{{this._id}}/edit" type="button" class="btn btn-outline-success btn-sm me-1">Edit</a>
+          <a class="btn btn-info m-1" href="/restaurants/{{ this._id }}" role="button">Detail</a>
+          <button type='button' class='btn btn-info'>Info</button>
         {{/each}}
       </div>
     </div>
