--- a/views/index.hbs
+++ b/views/index.hbs
@@ -54,9 +54,11 @@
               </div>
             </div>
           </a>
-          <a href="/restaurants/{{this._id}}/edit" type="button" class="btn btn-outline-success btn-sm me-1">Edit</a>
-          <a class="btn btn-info m-1" href="/restaurants/{{ this._id }}" role="button">Detail</a>
-          <button type='button' class='btn btn-info'>Info</button>
+          <div class="restaurant-button-group justify-content-end p-0 mb-3">
+          <a href="/restaurants/{{this._id}}/edit" class="btn btn-success btn-sm me-1" role="button">Edit</a>
+          <a href="/restaurants/{{ this._id }}" class="btn btn-info btn-sm m-1" role="button">Detail</a>
+          <a href="/restaurants/{{ this._id }}" class="btn btn-danger btn-sm m-1" role="button">delete</a>
+          </div>
         {{/each}}
       </div>
     </div>
