--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     <link rel='stylesheet' href='/stylesheets/index.css' />
     <script src="https://kit.fontawesome.com/a894427766.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='/stylesheets/show.css' />
+    <link rel='stylesheet' href='/stylesheets/error.css' />
     <!-- link css files here -->
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
   </head>
@@ -35,6 +36,7 @@
     </header>
     <!-- partial templates will replace the part of "body" here -->
     {{{body}}}
+    <script src='/javascripts/error.js'></script>
     <!-- include javascript files here -->
     <script src='/javascripts/jquery-3.3.1.js'></script>
     <script src='/javascripts/popper.js'></script>
