--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,10 @@
     <title>Document</title>
     <!-- link index.css files here -->
     <link rel='stylesheet' href='/stylesheets/index.css' />
-    <script src="https://kit.fontawesome.com/a894427766.js" crossorigin="anonymous"></script>
+    <script
+      src='https://kit.fontawesome.com/a894427766.js'
+      crossorigin='anonymous'
+    ></script>
     <link rel='stylesheet' href='/stylesheets/show.css' />
     <!-- link css files here -->
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
@@ -28,6 +31,7 @@
             />
             我的餐廳清單
           </a>
+          <a class='nav-link' href='/restaurants/new'>新增餐廳</a>
         </div>
       </nav>
 
