--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,9 +55,9 @@
             </div>
           </a>
           <div class="restaurant-button-group justify-content-end p-0 mb-3">
-          <a href="/restaurants/{{this._id}}/edit" class="btn btn-success btn-sm me-1" role="button">Edit</a>
+          <a href="/restaurants/{{this._id}}?_method=PUT" class="btn btn-success btn-sm me-1" role="button">Edit</a>
           <a href="/restaurants/{{ this._id }}" class="btn btn-info btn-sm m-1" role="button">Detail</a>
-          <form action="/restaurants/{{this._id}}/delete" method="POST" style="display: inline">
+          <form action="/restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display: inline">
           <button type="submit" class="btn btn-danger btn-sm m-1">delete</button>
         </form>
         </div>
