--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,9 +29,16 @@
 <div class='container mt-5'>
   <div class='row'>
     <div class='col-md-10 col-12 mx-auto'>
+      {{! error }}
+      {{#if error}}
+        <div class='error-message card card-body shadow'>
+          <h2><i class='far fa-sad-tear'></i>{{this.error}}</h2>
+        </div>
+      {{/if}}
+      {{!-- list display --}}
       <div class='card-columns'>
         {{#each restaurants}}
-          <a href='/restaurants/{{ this._id }}' class='text-secondary'>
+          <a href='/restaurants/{{this._id}}' class='text-secondary'>
             <div class='card mb-3'>
               <img
                 class='card-img-top'
@@ -54,13 +61,28 @@
               </div>
             </div>
           </a>
-          <div class="restaurant-button-group justify-content-end p-0 mb-3">
-          <a href="/restaurants/{{this._id}}?_method=PUT" class="btn btn-success btn-sm me-1" role="button">Edit</a>
-          <a href="/restaurants/{{ this._id }}" class="btn btn-info btn-sm m-1" role="button">Detail</a>
-          <form action="/restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display: inline">
-          <button type="submit" class="btn btn-danger btn-sm m-1">delete</button>
-        </form>
-        </div>
+          <div class='restaurant-button-group justify-content-end p-0 mb-3'>
+            <a
+              href='/restaurants/{{this._id}}?_method=PUT'
+              class='btn btn-success btn-sm me-1'
+              role='button'
+            >Edit</a>
+            <a
+              href='/restaurants/{{this._id}}'
+              class='btn btn-info btn-sm m-1'
+              role='button'
+            >Detail</a>
+            <form
+              action='/restaurants/{{this._id}}?_method=DELETE'
+              method='POST'
+              style='display: inline'
+            >
+              <button
+                type='submit'
+                class='btn btn-danger btn-sm m-1'
+              >delete</button>
+            </form>
+          </div>
         {{/each}}
       </div>
     </div>
