fix: edit routes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -63,7 +63,7 @@
           </a>
           <div class='restaurant-button-group justify-content-end p-0 mb-3'>
             <a
-              href='/restaurants/{{this._id}}?_method=PUT'
+              href='/restaurants/{{this._id}}/edit'
               class='btn btn-success btn-sm me-1'
               role='button'
             >Edit</a>
